syntax = "proto3";

package ZeiJakuSei.Packets;

enum ConnectionInfo {
    Success = 0;
    Disconnect = 1;
}